--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
@@ -34,6 +34,7 @@
     </fieldset>
 
     <div class="grid grid-1-2">
-        <button class="button" type="submit">Save</button>
+        <button class="button" type="submit">Save and return</button>
+        @Html.RouteLink("Cancel", RecruitmentRouteNames.VacancyApplications, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
     </div>
 }
