--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -11,7 +11,7 @@
 <div>
     @Html.DisplayFor(m => m, VacancyViewModel.PartialView)
 
-    @if (Model.Status == ProviderVacancyStatuses.Live)
+    @if (Model.Status.IsStateReadOnly())
     {
         <a id="dashboardLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Return to recruitment home</a>
     }
