--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_closingDate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_closingDate.cshtml
@@ -2,11 +2,7 @@
 
 @if (Model != null && Model.HasValue)
 {
-    var daysTillClose = (Model.Date - DateTime.UtcNow).Days;
-    /*if (daysTillClose < 0)
-    {
-        <span class="note-text" style="color: red">closed</span>
-    }*/
+    var daysTillClose = (Model.Date - DateTime.UtcNow.Date).Days;
     if (daysTillClose == 0)
     {
         <span class="note-text" style="color: red; font-weight: bold">closing today</span>
@@ -15,11 +11,7 @@
     {
         <span class="note-text">closing in 1 day</span>
     }
-    if (daysTillClose > 1 && daysTillClose < 4)
-    {
-        <span class="note-text">closing in @daysTillClose days</span>
-    }
-    if (daysTillClose > 4)
+    if (daysTillClose > 1 && daysTillClose <= 5)
     {
         <span class="note-text">closing in @daysTillClose days</span>
     }
