Fixed a bug displaying regions on the preview page as editable or not.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_ValidationResultIcons.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_ValidationResultIcons.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model ValidationResultViewModel
 
-@if (Model.Status.IsStateEditable())
+@if (Model.Status.IsStateReviewable())
 {
     <a name="@Model.AnchorName"></a>
     if (Model.HasWarning)
