--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_CommentIcon.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_CommentIcon.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.CommentViewModel
     
-@if (Model.HasComment && Model.Status.IsStateEditable())
+@if (Model.HasComment && Model.Status.IsStateReviewable())
 {
     <a href="@Model.ViewCommentUrl"><i class="fa fa-comment the-icon raa-icon-comment" title="there are comments"><span class="visuallyhidden">there are comments</span></i></a>
 }
