--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_EditLink.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
 
-@if (Model.Status.IsStateEditable())
+@if (Model.Status.IsStateReviewable())
 {
     <a href="@Model.EditUrl" class="edit-comment-link">Edit/Comment</a>
 }
