--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -19,6 +19,12 @@
     case ProviderVacancyStatuses.Closed:
         <span class="tag-live" style="width: 110px">Closed</span>
         break;
+    case ProviderVacancyStatuses.Completed:
+        <span class="tag-live" style="width: 110px">Completed</span>
+        break;
+    case ProviderVacancyStatuses.Withdrawn:
+        <span class="tag-live" style="width: 110px">Withdrawn</span>
+        break;
     default:
         break;
 }
