Fixing regression issue with partially completing a multi location vacancy

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -273,7 +273,7 @@
                                             @{
                                                 var title = string.IsNullOrEmpty(vacancy.NewVacancyViewModel.Title) ? "(No Title)" : vacancy.NewVacancyViewModel.Title;
                                                 var routeName = RecruitmentRouteNames.PreviewVacancy;
-                                                if (vacancy.Status == ProviderVacancyStatuses.Draft)
+                                                if (vacancy.Status == ProviderVacancyStatuses.Unknown || vacancy.Status == ProviderVacancyStatuses.Draft)
                                                 {
                                                     routeName = RecruitmentRouteNames.ReviewCreateVacancy;
                                                 }
