Hiding parent vacancies from dashboard and correcting some minor Americanisms

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -27,7 +27,7 @@
     @if (Model.IsMultiLocationVacancy)
     {
         <p>
-            Once your vacancy has been reviewed and approved by a Skills Funding Agency adviser, it will be split into separate averts for each location.
+            Once your vacancy has been reviewed and approved by a Skills Funding Agency adviser, it will be split into separate adverts for each location.
         </p>
         <p>
             You'll be notified via your recruitment homepage if any changes are necessary before the adverts go live.
