Vacancy status formatting

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -255,3 +255,7 @@ table#rightLocationAddressesTable{
 .no-employers-optional-action{
     margin-top:20px;
 }
+
+.vac-status{
+    text-align: center;
+}
