--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -5381,7 +5381,6 @@ details summary:focus {
   padding: 1px 5px 0 5px;
   vertical-align: middle;
   text-align: center;
-  text-transform: uppercase;
   white-space: nowrap;
   width: auto; }
   @media (max-width: 640px) {
@@ -6377,6 +6376,9 @@ h2 a i.raa-icon-comment {
 
 .no-employers-optional-action {
   margin-top: 20px; }
+
+.vac-status {
+  text-align: center; }
 
 .applicant-location,
 .applicant-distance {
