--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_closingDate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_closingDate.cshtml
@@ -2,17 +2,12 @@
 
 @if (Model != null && Model.HasValue)
 {
-    var daysTillClose = (Model.Date - DateTime.UtcNow.Date).Days;
-    if (daysTillClose == 0)
+    if (Model.Date.ShouldEmphasiseClosingDate())
     {
-        <span class="note-text" style="color: red; font-weight: bold">closing today</span>
+        <span class="note-text" style="color: red; font-weight: bold">@Model.Date.GetClosingDate()</span>
     }
-    if (daysTillClose == 1)
+    else
     {
-        <span class="note-text">closing in 1 day</span>
-    }
-    if (daysTillClose > 1 && daysTillClose <= 5)
-    {
-        <span class="note-text">closing in @daysTillClose days</span>
+        <span class="note-text">@Model.Date.GetClosingDate()</span>
     }
 }
