--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
@@ -7,7 +7,7 @@
 <div class="panel-success toggle-content" id="nextProviderBanner">
     <div class="text">
         <div class="copy-16">
-            <p>Please take a moment to fill in your contact details.</p>
+            <p>Take a moment to fill in your contact details.</p>
         </div>
     </div>
 </div>
