--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/EditorTemplates/AddressViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/EditorTemplates/AddressViewModel.cshtml
@@ -9,7 +9,7 @@
     <div id="address-manual" class="form-group form-group-compound">
         <a href="#" class="copy-19" id="enterAddressManually">Or enter address manually</a>
         <span class="toggle-content hide-nojs loading-text" id="addressLoading">Loading address...</span>
-        <span style="color: red" id="postcodeServiceUnavailable" class="copy-19 toggle-content hide-nojs text">Service is currently unavailable, please enter address manually</span>
+        <span style="color: red" id="postcodeServiceUnavailable" class="copy-19 toggle-content hide-nojs text">Service is currently unavailable, enter address manually</span>
     </div>
 </div>
 
