--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/ApprenticeshipLevel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/ApprenticeshipLevel.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies.Apprenticeship
 @model ApprenticeshipLevel
 @{
-    var text = Model == ApprenticeshipLevel.Unknown ? "Please select an apprenticeship standard" : Model.ToString();
+    var text = Model == ApprenticeshipLevel.Unknown ? "Select an apprenticeship standard" : Model.ToString();
     if (Model == ApprenticeshipLevel.FoundationDegree || Model == ApprenticeshipLevel.Masters)
     {
         text = ApprenticeshipLevel.Degree.ToString();
