--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -6380,6 +6380,10 @@ h2 a i.raa-icon-comment {
 .vac-status {
   text-align: center; }
 
+.select-employer-link-to-new {
+  margin-bottom: 15px;
+  display: block; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
