--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/ContactUs.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/ContactUs.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Contact us - Manage an Apprentice";
+    ViewBag.Title = "Contact us - Agency home";
 }
 
 <div class="hgroup">
