--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using SFA.Apprenticeships.Web.Manage.Constants
 @{
-    ViewBag.Title = "Manage an Apprentice";
+    ViewBag.Title = "Agency home";
 }
 
 <div class="grid-wrapper">
