--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/Privacy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Privacy and cookies - Manage an Apprentice";
+    ViewBag.Title = "Privacy and cookies - Agency home";
 }
 
 <div class="hgroup">
