--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/TermsAndConditions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/TermsAndConditions.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Terms and conditions - Manage an Apprentice";
+    ViewBag.Title = "Terms and conditions - Agency home";
 }
 
 <div class="hgroup">
