--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             </div>
             <div class="global-header__nav">
                 <div class="global-header__title beta" id="headerLinkFAA">
-                    <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard)">Manage an apprentice</a>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard)">Agency home</a>
                 </div>
             </div>
         </div>
