--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_EditLink.cshtml
@@ -2,5 +2,5 @@
 
 @if (Model.Status.IsStateReviewable())
 {
-    <a href="@Model.EditUrl" class="edit-comment-link">Edit/Comment</a>
+    <a href="@Model.EditUrl" class="edit-comment-link">Edit/comment</a>
 }
