--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -16,9 +16,9 @@
 
         <section>
             <div class="form-group">
-                <button id="btnApprove" type="submit" class="button" name="VacancyQAAction" value="Approve">Approve</button>
+                <button id="btnApprove" type="submit" class="button" name="VacancyQAAction" value="Approve">Approve and continue to next vacancy</button>
                 <button id="btnReject" type="submit" class="button-link" name="VacancyQAAction" value="Reject">Refer</button>
-                <a id="dashboardLink" href="@Url.RouteUrl(ManagementRouteNames.Dashboard)">Return to dashboard</a>
+                <a id="dashboardLink" href="@Url.RouteUrl(ManagementRouteNames.Dashboard)">Agency home</a>
             </div>
         </section>
     }
