--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @using SFA.Apprenticeships.Web.Recruit.ViewModels.Application
 @using SFA.Apprenticeships.Web.Recruit.ViewModels.Application.Apprenticeship
@@ -42,15 +43,7 @@
                     <p class="small-btm-margin">
                         Closing Date: @Model.ClosingDate.Date.ToFriendlyClosingToday()
                     </p>
-                    @if (Model.Status != ProviderVacancyStatuses.Completed)
-                    {
-                        <p class="small-btm-margin">
-                            @Html.RouteLink("Manage vacancy dates", RecruitmentRouteNames.ManageDates, new {vacancyReferenceNumber = Model.VacancyApplicationsSearch.VacancyReferenceNumber}, new {@class = "disp-block"})
-                        </p>
-                    }
-                    <p class="small-btm-margin">
-                        <a href="">Withdraw</a>
-                    </p>
+                    @Html.Partial(VacancyLinksViewModel.PartialView, new VacancyLinksViewModel(Model.VacancyApplicationsSearch.VacancyReferenceNumber, Model.Status))
                 </div>
             </div>
         </section>
