Do not show Vac Ref No ANYWHERE until vacancy is Live

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -45,7 +45,7 @@
                         <table class="no-btm-margin">
                             <colgroup>
                                 <col class="t15">
-                                <col class="t15">
+                                @*<col class="t15">*@
                                 <col class="t15">
                                 <col class="t15">
                                 <col class="t15">
@@ -55,7 +55,7 @@
                             <thead>
                                 <tr>
                                     <th>Title</th>
-                                    <th>Reference</th>
+                                    @*<th>Reference</th>*@
                                     <th>Provider</th>
                                     <th>Date submitted</th>
                                     <th>Closing date</th>
@@ -70,9 +70,9 @@
                                     <td>
                                         <span class="vac-title">@vacancy.Title</span>
                                     </td>
-                                    <td>
+                                    @*<td>
                                         <span>@vacancy.VacancyReferenceNumber.GetVacancyReference()</span>
-                                    </td>
+                                    </td>*@
                                     <td>
                                         <span>@vacancy.ProviderName</span>
                                     </td>
