Highlight offline vacancies in the title

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -6105,6 +6105,8 @@ aside h2:first-child {
   font-weight: bold; }
   .vac-title a {
     text-decoration: none; }
+  .vac-title .subtitle {
+    font-weight: normal; }
 
 #employer-data-display {
   display: none; }
