--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -6382,6 +6382,9 @@ h2 a i.raa-icon-comment {
 .vac-status {
   text-align: center; }
 
+.vac-no-of-applications {
+  text-align: center; }
+
 .select-employer-link-to-new {
   margin-bottom: 15px;
   display: block; }
