--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -263,6 +263,10 @@ table#rightLocationAddressesTable{
     text-align: center;
 }
 
+.vac-no-of-applications{
+    text-align: center;
+}
+
 .select-employer-link-to-new{
     margin-bottom:15px;
     display:block;
